src/style.scss
/* ... */
/*
* Form
* ================================== */
[type="text"] {
  width: 100%;
  margin: 0 1rem 1rem 0;
  padding: .6rem;
  background: none;
  border-radius: 2px;
  font-size: 1.6rem;
  font-family: inherit;
}

button {
  -webkit-appearance: none;
  -moz-appearance: none;
  border: 0;
  background: none;
  padding: 5px 10px;
  transition: .3s ease;
}






/*
* Components
* ================================== */
$pd-desktop: 24px;

.container_wrap {

  @media screen and (max-width: 1023px) {
    & > div {
      width: 100%;
    }
  }

  @media screen and (min-width: 1024px) {
    display: flex;
    flex-wrap: wrap;
    margin: 0 0 -#{$pd-desktop} -#{$pd-desktop};
  }
}

.container {
  margin: 0 0 16px;
  padding: 2.4rem;
  border-radius: 8px;
  background-color: #fff;
  box-shadow: 0 0 4px 0 rgba(#000, .14);

  h2 {
    margin: 0 0 16px;
    font-size: 1.3rem;
    font-weight: 400;
    letter-spacing: .05em;
    line-height: 1.2;
  }

  @media screen and (min-width: 1024px) {
    margin: 0 0 24px 24px;
    padding: 3.2rem 4rem;

    h2 {
      margin: 0 0 16px;
      font-size: 1.6rem;
    }
  }
}


.container_destination {
  h2 { color: $color-destination; }

  @media screen and (min-width: 1024px) {
    width: 31%;
    flex: 1;
  }
}



.container_date {
  h2 { color: $color-date; }

  @media screen and (min-width: 1024px) {
    width: 48%;
  }
}


.container_todos {
  h2 { color: $color-todos; }

  @media screen and (min-width: 1024px) {
    width: 31%;
    flex: auto;
    max-width: 370px;
  }
}

.container_todos {
  h2 {
    color: $color-todos;
  }
}

.container_weather {
  h2 { color: $color-weather; }

  @media screen and (min-width: 1024px) {
    width: 25%;
    min-width: 305px;
    flex: 1;
  }
}

.container_location {
  h2 { color: $color-locations; }

  @media screen and (min-width: 1024px) {
    width: 37.8%;
    min-width: 463px;
    flex: 1;
  }
}

.container_attractions {
  h2 { color: $color-attractions; }

  @media screen and (min-width: 1024px) {
    width: 100%;
  }
}

.msg_nodestination {
  color: #aaa;
}


.logout, .plan {
  background-color: $primary-color;
  border-radius: 3px;
  padding: 10px;
  color: white;
  font-family: inherit;
  cursor: pointer;

  &:hover {
    background-color: darken($primary-color, 10);
    box-shadow: 0 8px 12px 0 rgba($primary-color, .24);
  }
}

.logout {
  position: relative;
  margin-left: auto;
  display: block;
}

.plan a {
  color: white;
  text-decoration: none;
}

.AuthModal {
    position: fixed;
    left: 0;
    right: 0;
    top: 5%;
    z-index: 500;
    background-color: white;
    width: 90%;
    height: auto;
    max-height: 90vh;
    margin: 0 auto;
    padding: 32px;
    border: 1px solid #ccc;
    box-shadow: 0px 0px 10px 4px rgba(185, 169, 156, 0.41);
    transition: all 0.3s ease-out;
    text-align: center;
    border-radius: 3px;
    overflow: auto;

    @media screen and (min-width: 768px) {
      top: 20%;
      width: 60%;
      max-width: 620px;
      padding: 40px;
    }

  .form {
    display: flex;
    flex-direction: row;

    @media screen and (max-width: 768px) {
      flex-direction: column;
    }

    h2 {
       font-size: 1.8rem;
       font-weight: 500;
       margin: 0px auto 20px;
       color: $font-color;
       text-align: left;
     }
    input {
       display: block;
       margin: auto;
       margin-bottom: 20px;
       border-radius: 3px;
       border: 1px solid #b3b3b3;
       font-size: 1.4rem;
       font-weight: 400;
       padding: 10px;
       width: 220px;
       background-color: $input-color;
       height: 50px;
     }
     button {
     	border-radius:4px;
      border: none;
     	display:inline-block;
     	cursor:pointer;
     	color: white;
      font-size: 1.4rem;
      font-weight: 400;
      padding: 8px 16px;
     	text-decoration:none;
      width: 220px;
      margin-bottom: 20px;
      height: 50px;
     }
     .first {
       background-color:$primary-color;
     }
     .second {
       background-color: $secondary-color;
     }
      button .looping-rhombuses-spinner {
         margin: 10px auto;
         .rhombus {
           background-color: white;
         }
       }
     .line {
       min-height: 200px;
       border-left: 2px solid $input-color;
       margin: 40px;
       @media screen and (max-width: 768px) {
         display: none;
       }
     }
     .message {
       max-width: 220px;
       color: $primary-color;
       margin-bottom: 20px;
       text-align: left;
     }
  }
}

.LogoutMessage {
  margin: auto;
  display: block;
  text-align: center;
  color: $primary-color;
  z-index: 150;
  position: absolute;
  width: 40%;
  left: 25%;
  background-color: white;
  padding: 5px 0;
  border-radius: 3px;
  border: 1px solid $input-color;
}

.avatar {
  width: 100%;
  text-align: center;

  img {
    height: 64px;
    width: 64px;
    border-radius: 50%;
  }

  p {
    margin: 4px 0;
    font-size: 1.4rem;
    font-weight: 500;
  }
  .inputFile {
  	width: 0.1px;
  	height: 0.1px;
  	opacity: 0;
  	overflow: hidden;
  	position: absolute;
  	z-index: -1;
    cursor: pointer;
  }
  button, label {
    display: block;
    width: 100%;
    max-width: 120px;
    margin: 0 auto;
    padding: 5px 10px;
    border-radius: 3px;
    font-size: 1.4rem;
    font-family: inherit;
    cursor: pointer;
    line-height: 1.2;
  }
  button {
    background-color: $primary-color;
    color: white;
    margin: 4px auto 0;
    padding: 8px 10px;
  }
  label {
    color: white;
    background-color: #aaa;
  }
  .looping-rhombuses-spinner {
    margin: 0;
    padding-top: 5px;
    .rhombus {
      background-color: white;
      height: 5px;
      width: 5px;
    }
  }

  @media screen and (min-width: 1024px) {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex: 1;
    width: 15%;
    min-width: 180px;
    padding: 1.6rem;
  }
}
/* ... */

